# farmdb

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: docker-publish.yml  lint.yml  semantic-release.yml  test.yml  update-infra-charts.yml
k8s/: README.md
k8s/argocd/: farmdb-application.yaml
k8s/helm/farmdb/: Chart.yaml  values-prod.yaml  values.yaml
k8s/helm/farmdb/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
src/: main.py  settings.py
src/apps/api/: graphql.py
src/apps/api/middleware/: auth.py  spa.py
src/apps/web/: biome.json  package-lock.json  package.json
src/apps/web/app/: layout.tsx  page.tsx
src/apps/web/app/(auth)/login/: page.tsx
src/apps/web/app/(auth)/register/: page.tsx
src/apps/web/app/account/passkeys/: page.tsx
src/apps/web/components/: logo.tsx
src/apps/web/lib/auth/: api.ts  context.tsx  index.ts  passkeys.ts  types.ts
src/cli/: __init__.py  migrations.py
src/config/: __init__.py  settings.py  utils.py
src/core/: container.py  providers.py  service.py
src/core/auth/: __init__.py  cookies.py  principal.py  resolver.py  router.py  service.py
src/core/auth/apikeys/: base.py  store.py
src/core/auth/models/: __init__.py  auth.py  error.py  passkey.py  user.py
src/core/authz/: base.py  client.py  fga.py  local.py  model.py  platform.py
src/core/config/: service.py
src/core/storage/: database.py
src/core/storage/migrations/: runner.py
src/features/: conftest.py
src/features/apikey/: router.py
src/features/apikey/_tests/: test_router.py
src/features/crop/: router.py
src/features/crop/_tests/: test_router.py
src/features/crop/handlers/create/: handler.py  input.py
src/features/crop/models/: activity.py  crop.py
src/features/farm/: graphql.py  rest.py  service.py
src/features/farm/_tests/: test_service.py
src/features/farm/handlers/create/: handler.py  input.py
src/features/farm/models/: farm.py
src/features/field/: router.py
src/features/field/_tests/: conftest.py  test_router.py
src/features/field/handlers/create/: handler.py  input.py
src/features/field/handlers/list/: handler.py
src/features/field/models/: base.py  field.py
src/migrations/: 0001_create_farms_table.py  0001_create_v1_schema.py  0002_create_configurations_table.py  0002_create_fields_table.py  0003_create_farms_table.py  0003_create_fields_table.py  0003_create_users_table.py  0004_add_user_id_to_fields.py  0005_add_user_id_to_fields.py  0006_create_crops_table.py  0006_create_geospatial_table.py  0007_create_activities_table.py  0007_drop_fields_geom.py  0008_create_api_keys_table.py  0009_alter_activities_description_nullable.py
tests/: test_create_farm.py
tests/features/crop/: test_create_crop.py
