[project]
name = "farmdb"
version = "0.1.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.4.3",
    "fastapi[standard]>=0.128.0",
    "httpx>=0.27.0",
    "openfga-sdk>=0.10.3",
    "pydantic-settings>=2.12.0",
    "python-ulid>=3.1.0",
    "pytz>=2026.2",
    "strawberry-graphql[fastapi]>=0.316.0",
    "typer>=0.9.0",
    "uvicorn>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
farmdb = "cli:app"

[tool.uv]
package = true

[tool.setuptools]
package-dir = {"" = "src"}

[tool.semantic_release]
version_variable = "pyproject.toml:project.version"
branch = "master"
upload_to_pypi = false
build_command = ""
changelog_file = "CHANGELOG.md"
commit_message = "{version}\n\n[skip ci]"

[tool.semantic_release.commit_parser_options]
allowed_types = ["feat", "fix", "chore", "refactor", "perf", "docs"]
minor_types = ["feat"]
patch_types = ["fix", "perf"]

[dependency-groups]
dev = [
    "ruff>=0.15.16",
]
